# fastapi-nimda

./: .gitignore  MANIFEST.in  NOTE.md  README.md  archetecture.md  database.3.db  database.db  database_test.db  justfile  main.py  main2.py  package-lock.json  plan.md  pyproject.toml
archive/root/: test.py
archive/templates/: base_copy.html
docs/: architecture.md  configurations.md  example.md  getting-started.md  limitations.md  roadmap.md
examples/postgres_admin_app/: Dockerfile  app.py  docker-compose.yml
examples/sqlalchemy_demo/: main.py
examples/sqlmodel_demo/: main.py
fastapi_nimda/: __init__.py  admin copy.py  admin.py  app.py  depends.py  errors.py  forms.py  helpers.py  inspection.py  messaging.py  operation.py  paginator.py  queries.py  registry.py  routing.py  services.py  types.py  widgets.py
fastapi_nimda/static/lib/: output.css
fastapi_nimda/static/src/: input.css
fastapi_nimda/templates/: 404.html  add.html  base.html  delete.html  edit.html  home.html  list.html  view.html
fastapi_nimda/templates/component/: alert.html  breadcrumb.html  icon.html  pagination.html  plus_svg.html  table copy.html  table.html
fastapi_nimda/templates/component/alert/: error.html  info.html  success.html
fastapi_nimda/templates/form/: div.html
fastapi_nimda/templates/form/widgets/: label.html  select.html  select_option.html  text.html
fastapi_nimda/templating/: __init__.py  filter.py  templating.py
tests/: conftest.py  test_forms.py  test_phase8_features.py  test_registration.py  test_relationships.py  test_routes.py
