[project]
name = "fastapi-nimda"
version = "0.1.0"
description = "A lightweight admin interface for FastAPI applications using SQLAlchemy or SQLModel."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "fastapi-nimda contributors" },
]
keywords = ["fastapi", "admin", "sqlalchemy", "sqlmodel", "jinja2"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "fastapi[standard]>=0.115.12",
    "jinja2>=3.1.6",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.40",
    "sqlmodel>=0.0.24",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.11.7",
]
