[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fastapi-nimda"
version = "0.1.0"
description = "A lightweight admin interface for FastAPI applications using SQLAlchemy or SQLModel."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "fastapi-nimda contributors" },
]
keywords = ["fastapi", "admin", "sqlalchemy", "sqlmodel", "jinja2"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "fastapi[standard]>=0.115.12",
    "jinja2>=3.1.6",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.40",
    "sqlmodel>=0.0.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.7",
    "mypy>=1.19.1",
]
postgres = [
    "psycopg[binary]>=3.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true

[tool.hatch.build.targets.sdist]
include = [
    "/fastapi_nimda",
    "/README.md",
    "/pyproject.toml",
]
exclude = [
    "/tests",
]

[tool.hatch.build.targets.wheel]
packages = ["fastapi_nimda"]

[tool.hatch.build]
exclude = [
    "/tests",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
